# bsts-causalimpact

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.cargo/: config.toml
.githooks/: pre-push  prepare-commit-msg
.github/workflows/: ci.yml  docs.yml  numerical-equivalence.yml  release.yml
api/: index.html
compatibility-matrix/: index.html
docs/: api.md  compatibility-matrix.md  examples.md  index.md  migration-from-r.md  migration-from-tfp.md  quickstart.ipynb  theory.md
examples/: index.html
migration-from-r/: index.html
migration-from-tfp/: index.html
python/causal_impact/: __init__.py  analysis.py  conformal.py  data.py  decomposition.py  main.py  options.py  placebo.py  plot.py  retrospective.py  selection.py  summary.py
scripts/: generate_docs_assets.py  generate_r_reference.R  generate_r_reference_dtw.R
search/: search_index.json
src/: distributions.rs  dtw.rs  kalman.rs  lib.rs  sampler.rs  state_space.rs
tests/: conftest.py  test_analysis.py  test_conformal.py  test_control_selection.py  test_data.py  test_decomposition.py  test_docs_assets.py  test_dtw_r_equivalence.py  test_dynamic_regression.py  test_horseshoe.py  test_integration.py  test_numerical_equivalence.py  test_options.py  test_placebo.py  test_plot.py  test_retrospective.py  test_rust_sampler.py  test_rust_speedup.py  test_seasonal_smoother.py  test_spike_slab.py  test_summary.py
tests/fixtures/: r_reference_basic.json  r_reference_covariates.json  r_reference_dtw.json  r_reference_no_effect.json  r_reference_seasonal.json  r_reference_strong_effect.json
theory/: index.html
