[package]
name = "causal_impact_core"
version = "1.2.0"
edition = "2021"

[lib]
name = "causal_impact_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rand = "0.8"
rayon = "1.10"
rand_distr = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
