[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bsts-causalimpact"
version = "1.5.0"
description = "CausalImpact for Python with Rust Gibbs sampler (R-compatible)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["causal-inference", "bayesian", "time-series", "causal-impact", "bsts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/YuminosukeSato/bsts-causalimpact"
Documentation = "https://yuminosukesato.github.io/bsts-causalimpact/"
Repository = "https://github.com/YuminosukeSato/bsts-causalimpact"
Changelog = "https://github.com/YuminosukeSato/bsts-causalimpact/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "causal_impact._core"
include = ["causal_impact/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.semantic_release]
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:project.version",
    "Cargo.toml:package.version",
]
version_variables = [
    "src/lib.rs:MODULE_VERSION",
]
commit_message = "chore(release): {version}"
no_git_verify = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
